<?xml version="1.0"?>
<package format="2">
    <name>zetton_inference</name>
    <version>1.0.0</version>
    <description>Deep learning inference nodes for ROS with support for both PC and Jetson devices.</description>
    <maintainer email="xxdsox@gmail.com">Yusu Pan</maintainer>
    <license>MIT</license>

    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>roscpp</build_depend>
    <build_depend>rospy</build_depend>
    <build_depend>roslib</build_depend>
    <build_depend>cv_bridge</build_depend>
    <build_depend>image_transport</build_depend>
    <build_depend>sensor_msgs</build_depend>
    <build_depend>message_generation</build_depend>
    <build_depend>zetton_common</build_depend>
    <exec_depend>roscpp</exec_depend>
    <exec_depend>rospy</exec_depend>
    <exec_depend>roslib</exec_depend>
    <exec_depend>cv_bridge</exec_depend>
    <exec_depend>image_transport</exec_depend>
    <exec_depend>sensor_msgs</exec_depend>
    <exec_depend>message_generation</exec_depend>
    <exec_depend>message_runtime</exec_depend>
    <exec_depend>zetton_common</exec_depend>
</package>