<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>zetton_inference</name>
  <version>2.0.0</version>
  <description>Deep learning inference nodes for Project Zetton.</description>
  <maintainer email="xxdsox@gmail.com">Yusu Pan</maintainer>
  <license>BSD 2-Clause</license>
  <url type="repository">https://github.com/project-zetton/zetton-inference</url>
  <author>Yusu Pan</author>

  <buildtool_depend>cmake</buildtool_depend>
  <depend>zetton_common</depend>
  <depend>zetton_stream</depend>

  <export>
    <build_type>cmake</build_type>
  </export>
</package>